add WafConfiguration